<resources>
    <string name="app_name">WMS</string>
    <string name="username_tips">请输入用户名</string>
    <string name="password_tips">请输入密码</string>
    <string name="login">登录</string>
    <string name="title_activity_log">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="index_outstore">出库</string>
    <string name="index_instore">入库</string>
    <string name="index_check">盘点</string>
    <string name="index_prepare">备货</string>
    <string name="index_sales_return">退货</string>
    <string name="index_setting">设置</string>
    <string name="index_label">中睿WMS仓储管理系统</string>
    <string name="instore_location_toolbar">托盘入库</string>
    <string name="instore_et_hint">请采集入库单</string>
    <string name="instore_public_rb_left">订单信息</string>
    <string name="instore_public_rb_right">入库信息</string>
    <string name="instore_public_tv">入库单号:</string>
    <string name="instore_order_no_tv">送货单号:</string>
    <string name="instore_order_no_tv_demo">SLS481038604401</string>
    <string name="instore_car_id">车牌号:</string>
    <string name="instore_car_id_demo">粤S666666</string>
    <string name="instore_shipper">货主:</string>
    <string name="instore_shipper_demo">GREE-DG</string>
    <string name="instore_country">产国:</string>
    <string name="instore_country_demo">CHINA</string>
    <string name="instore_total_count">总数量:</string>
    <string name="instore_total_count_demo">50</string>
    <string name="instore_order_singleMaterialNum">单机物料编码:</string>
    <string name="instore_order_singleMaterialNum_demo">KA442N46300</string>
    <string name="instore_order_singleProductType">单机商品型号:</string>
    <string name="instore_order_singleProductType_demo">KF-26W/NB02-3(含管) 顶</string>
    <string name="instore_count">数量:</string>
    <string name="item_instore_location_code">库位编码:</string>
    <string name="item_instore_material_barcode">物料条码:</string>
    <string name="item_instore_location_code_hint">请采集库位</string>
    <string name="item_instore_material_barcode_hint">请采集物料条码</string>
    <string name="confirm">确认</string>
    <string name="instore_order_materialNum">物料编码:</string>
    <string name="item_instore_location_code_demo">A1D1F2</string>
    <string name="item_instore_product_type">商品型号:</string>
    <string name="item_instore_order_count">订单数量:</string>
    <string name="item_instore_order_unallocation_qty">剩余数量:</string>
    <string name="item_instore_order_instore_qty">入库数量:</string>
    <string name="instore_index_location">订单入库</string>
    <string name="instore_index_tray">托盘入库</string>
    <string name="instore_index_materialBarcode">条码入库</string>
    <string name="instore_index">入库管理</string>
    <string name="item_instore_tray_code">托盘编码:</string>
    <string name="item_instore_order_qty">订单数量:</string>
    <string name="item_instore_scan_qty">已扫数量:</string>
    <string name="setting_address">地址</string>
    <string name="setting_address_tips">请选择仓库</string>
    <string name="setting_version">当前版本</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_logout">退出当前登录</string>
    <string name="check_index_day">日盘</string>
    <string name="check_index_total">总盘</string>
    <string name="check_index">盘点管理</string>
    <string name="check_location">库位:</string>
    <string name="item_outstore_count">出库数量:</string>
    <string name="item_check_inventory_qty">库存数量:</string>
    <string name="item_check_actual_qty">实际数量:</string>
    <string name="check_tray">托盘:</string>
    <string name="tray_demo">T0001</string>
    <string name="check_confirm">盘点确认</string>
    <string name="check_abnormal">盘点异常</string>
</resources>
