<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_instore_fragment_materialNum"
            style="@style/item_instore_location_rl_tv"
            android:text="@string/instore_order_materialNum"></TextView>

        <TextView
            android:id="@+id/item_instore_fragment_materialNum_demo"
            style="@style/item_instore_location_rl_tv"
            android:layout_toRightOf="@+id/item_instore_fragment_materialNum"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/instore_order_singleMaterialNum_demo"></TextView>

        <TextView
            android:id="@+id/item_instore_fragment_locationCode"
            style="@style/item_instore_location_rl_tv"
            android:layout_toRightOf="@+id/item_instore_fragment_materialNum_demo"
            android:text="@string/item_instore_location_code"></TextView>

        <TextView
            android:id="@+id/item_instore_fragment_locationCode_demo"
            style="@style/item_instore_location_rl_tv"
            android:layout_toRightOf="@+id/item_instore_fragment_locationCode"
            android:text="@string/item_instore_location_code_demo"></TextView>

        <TextView
            android:id="@+id/item_instore_fragment_product_type"
            style="@style/item_instore_location_rl_tv"
            android:layout_below="@+id/item_instore_fragment_materialNum"
            android:text="@string/item_instore_product_type"></TextView>

        <TextView
            android:id="@+id/item_instore_fragment_product_type_demo"
            style="@style/item_instore_location_rl_tv"
            android:layout_below="@+id/item_instore_fragment_materialNum_demo"
            android:layout_toRightOf="@+id/item_instore_fragment_product_type"
            android:text="@string/instore_order_singleProductType_demo"></TextView>

        <TextView
            android:id="@+id/item_instore_fragment_order_count"
            style="@style/item_instore_location_rl_tv"
            android:layout_below="@+id/item_instore_fragment_product_type"
            android:text="@string/item_instore_order_count"></TextView>

        <TextView
            android:id="@+id/item_instore_fragment_order_count_demo"
            style="@style/item_instore_location_rl_tv"
            android:layout_below="@+id/item_instore_fragment_product_type_demo"
            android:layout_toRightOf="@+id/item_instore_fragment_product_type"
            android:text="@string/instore_total_count_demo"></TextView>

        <TextView
            android:id="@+id/item_instore_fragment_order_unallocation_qty"
            style="@style/item_instore_location_rl_tv"
            android:layout_below="@+id/item_instore_fragment_product_type_demo"
            android:layout_toRightOf="@+id/item_instore_fragment_materialNum_demo"
            android:text="@string/item_instore_order_unallocation_qty"></TextView>

        <TextView
            android:id="@+id/item_instore_fragment_order_unallocation_qty_demo"
            style="@style/item_instore_location_rl_tv"
            android:layout_below="@+id/item_instore_fragment_product_type_demo"
            android:layout_toRightOf="@+id/item_instore_fragment_order_unallocation_qty"
            android:text="@string/instore_total_count_demo"></TextView>

        <TextView
            android:id="@+id/item_instore_fragment_order_instore_qty"
            style="@style/item_instore_location_rl_tv"
            android:layout_below="@+id/item_instore_fragment_order_count"
            android:layout_alignBottom="@+id/item_instore_fragment_order_instore_qty_demo"
            android:text="@string/item_instore_order_instore_qty"></TextView>

        <EditText
            android:id="@+id/item_instore_fragment_order_instore_qty_demo"
            style="@style/item_instore_location_rl_tv"
            android:layout_below="@+id/item_instore_fragment_order_count"
            android:layout_toRightOf="@+id/item_instore_fragment_order_instore_qty"
            android:background="@drawable/instore_public_et"
            android:text="@string/instore_total_count_demo"></EditText>
    </RelativeLayout>
</RelativeLayout>