<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_BBBBBB">

    <RelativeLayout
        android:id="@+id/instore_fragment_loc_rl"
        style="@style/item_instore_fragment_location_rl_style">

        <TextView
            android:id="@+id/instore_fragment_loc_tv"
            style="@style/item_instore_fragement_location_tv"
            android:text="@string/item_instore_location_code"></TextView>

        <EditText
            android:id="@+id/instore_fragment_loc_et"
            style="@style/item_instore_fragment_location_et_style"
            android:layout_toRightOf="@+id/instore_fragment_loc_tv"
            android:hint="@string/item_instore_location_code_hint"></EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/instore_fragment_materialBarcode_rl"
        style="@style/item_instore_fragment_location_rl_style"
        android:layout_below="@+id/instore_fragment_loc_rl">

        <TextView
            android:id="@+id/instore_fragment_materialBarcode_tv"
            style="@style/item_instore_fragement_location_tv"
            android:text="@string/item_instore_material_barcode"></TextView>

        <EditText
            android:id="@+id/instore_fragment_materialBarcode_et"
            style="@style/item_instore_fragment_location_et_style"
            android:layout_toRightOf="@+id/instore_fragment_materialBarcode_tv"
            android:hint="@string/item_instore_material_barcode_hint"></EditText>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/instore_fragement_location_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instore_fragment_materialBarcode_rl"></androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/login_btn"
        android:text="@string/confirm"
        style="@style/confirm_btn_style"></Button>

</RelativeLayout>